--- a/RestaurantApp /views/resultpage.ejs
+++ b/RestaurantApp /views/resultpage.ejs
@@ -20,4 +20,13 @@
 
 <p> Phone Number : <%= info[7]%></p>
 
+<form action:"/save", method = "POST">
+
+	
+	<button>SAVE THIS RESTAURANT PLZ</button>
+
+
+</form>
+
+
 </body>
