--- a/RestaurantApp /views/login.ejs
+++ b/RestaurantApp /views/login.ejs
@@ -5,6 +5,12 @@
        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <style type="text/css">
+          a{
+            font-family : "Papyrus" ;
+            font-size: 20px ;
+          }
+        </style>
     </head>
     <body>
     <nav class="navbar navbar-default">
@@ -27,20 +33,139 @@
         </div>
     </nav>
 
+<!--style type="text/css">
+    h1{
+        font-family: "Copperplate" ; 
+        font-size: 85px ; 
+    }
+
+body
+{
+        background-image:"https://s1.favim.com/orig/18/faded-food-light-pancakes-raspberries-Favim.com-198504.jpg";
+         background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+</style-->
 
 
+<!--body background="https://s1.favim.com/orig/18/faded-food-light-pancakes-raspberries-Favim.com-198504.jpg"-->
+
+<!--head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login Form</title>
+  <link rel="stylesheet" href="css/style.css">
+ 
+
+  <style type="text/css">
+    h1{
+        font-family: "Copperplate" ; 
+        font-size: 85px ; 
+    }
+
+body
+{
+        background-image:"https://s1.favim.com/orig/18/faded-food-light-pancakes-raspberries-Favim.com-198504.jpg";
+         background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+</style>
+
+</head>
+
+<body>
+  
+  <div class="bg"></div-->
+
+  <!--section class="container">
+    <div class="login">
+      <center><h1>Login</h1></center>
+      <br>
+      <br>      
+    <center>
+        <form  action="/login" method= "POST">
+
+        <input type="text" name="username" placeholder="username">
+        <br>
+        <br>
+        <input type="password" name="password" placeholder="password">
+        <br>
+        <br>
+        <button>Submit</button>
+
+      </form>
+  </center>
+
+    </div>
+  </section-->
 
 
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<h1>Log In!</h1>
+<style>
+body, html
+ {
+    height: 100%;
+    margin: 0;
+    background-image: url("https://s1.favim.com/orig/18/faded-food-light-pancakes-raspberries-Favim.com-198504.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1{
+        font-family: "Copperplate" ; 
+        font-size: 85px ; 
+    }
+
+.bg {
+    /* The image used */
+    background-image: url("https://s1.favim.com/orig/18/faded-food-light-pancakes-raspberries-Favim.com-198504.jpg");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 
-<form action="/login" method= "POST">
+</style>
+</head>
+<body>
 
-	<input type="text" name="username" placeholder="username">
-	<br>
-	<input type="password" name="password" placeholder="password">
+<!--div class="bg"></div-->
 
-	<button>Submit</button>
+<section class="container">
+    <div class="login">
+      <center><h1>Login</h1></center>
+      <br>
+      <br>      
+    <center>
+        <form  action="/login" method= "POST">
 
-</form>
+        <input type="text" name="username" placeholder="username">
+        <br>
+        <br>
+        <input type="password" name="password" placeholder="password">
+        <br>
+        <br>
+        <button style="background-color:Snow ; font-size: 20px ; font-family: Papyrus">Log in</button>
+
+      </form>
+  </center>
+
+    </div>
+  </section>
+
+</body>
+</html>
