--- a/RestaurantApp /views/saved.ejs
+++ b/RestaurantApp /views/saved.ejs
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <title>Favourites</title>
-       
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <style type="text/css">
+          a
+          {
+            font-family : "Papyrus" ;
+            font-size: 20px ;
+          }
+        </style>
     </head>
     <body>
     <nav class="navbar navbar-default">
@@ -15,7 +23,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                 <li><a href="/saved">Saved Restaurants</a></li>
-                   <% if(!currentUser){ %>
+                  <% if(!currentUser){ %>
                         <li><a href="/login">Login</a></li>
                         <li><a href="/register">Sign Up</a></li>
                      <% } else { %>
@@ -30,29 +38,103 @@
 
 
 
+<style>
+
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    height: 100%;
+    margin: 0;
+    background-image: url("https://st.depositphotos.com/2130737/4515/i/950/depositphotos_45155937-stock-photo-texture-of-white-rough-fabric.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+table {
+  text-align: left;
+  line-height: 40px;
+  border-collapse: separate;
+  border-spacing: 0;
+  border: 2px solid #000000;
+  width: 500px;
+  margin: 50px auto;
+  border-radius: .25rem;
+}
+
+thead tr:first-child {
+  background: #4169E1;
+  color: #fff;
+  border: none;
+  font-family : "Papyrus" ;
+}
+
+th:first-child,
+td:first-child {
+  padding: 0 15px 0 20px;
+  font-family : "Papyrus" ;
+}
+
+thead tr:last-child th {
+  border-bottom: 3px solid #ddd;
+}
+
+tbody tr:hover {
+  background-color: #f2f2f2;
+  cursor: default;
+}
+
+tbody tr:last-child td {
+  border: none;
+}
+
+tbody td {
+  border-bottom: 1px solid #ddd;
+  font-family : "Papyrus" ;
+  background: #FFFFFF ;
+}
+
+td:last-child {
+  text-align: left;
+  padding-left: 10px;
+  font-family : "Papyrus" ;
+  background: #FFFFFF ;
+}
+
+h1
+{
+  font-family: "Papyrus" ;
+  font-size: 50px ;
+}
+
+</style>
 
 
 <head>
 <title>Saved Restaurants</title>
-<h1>Saved Restaurants</h1>
+<center><h1>Saved Restaurants</h1></center>
+</head>
 
 <body>
-
-<% listOfRestaurants.forEach(function(rest){ %>
-	
-	<p> Name : <%= rest%></p>
-
------------------------------------
-
+  <table>
+    <thead>
+      <tr>
+        <th colspan="1"><b><center>Name of the Restaurants</center></b></th>
+      </tr>
+    </thead>
+  <tbody>
+<%listOfRestaurants.forEach(function(rest){ %>
+  <tr>
+  <td> <%= rest%></td>
+  </tr>
 <%})%>
 
-
-
-	
-
-
-
-
-
+</tbody>
+</table>
 
 </body>
+</html>
